# Dao_Zk_Proof_Voting

./: .gitignore  LICENSE  README.md
Dao_Zk_Proof_Contract_Applying_Curve25519/: Cargo.toml
Dao_Zk_Proof_Contract_Using_Bellman/: .gitignore  Anchor.toml  README.md  package-lock.json
Dao_Zk_Proof_Contract_Using_Bellman/programs/dao_voting/: Cargo.toml
Dao_Zk_Proof_Contract_Using_Bellman/programs/dao_voting/src/: errors.rs  lib.rs
Dao_Zk_Proof_Contract_Using_Bellman/tests/: dao_voting.ts
Dao_Zk_Proof_Contract_Using_Curve_Dalek/: Anchor.toml  README.md  package.json
Dao_Zk_Proof_Contract_Using_Curve_Dalek/programs/Dao_Zk_Proof_Contract_Using_Curve_Dalek/: Cargo.toml
Dao_Zk_Proof_Contract_Using_Curve_Dalek/programs/Dao_Zk_Proof_Contract_Using_Curve_Dalek/src/: constants.rs  errors.rs  lib.rs  state.rs
Dao_Zk_Proof_Contract_Using_Curve_Dalek/programs/Dao_Zk_Proof_Contract_Using_Curve_Dalek/src/zk_proof/: create_proofs.rs  elgamal_file.rs  mod.rs
Dao_Zk_Proof_Contract_Using_Curve_Dalek/tests/: Dao_Zk_Proof_Contract_Using_Curve_Dalek.ts
Dao_Zk_Proof_Voting_Using_Bellman/programs/dao_voting/src/zk/: elgamal.rs  mod.rs  proofs.rs
Zk_Proof_Generation_For_Bellman/: Cargo.toml  README.md
Zk_Proof_Generation_For_Bellman/src/: main.rs
programs/dao_voting/: Cargo.toml
programs/dao_voting/src/: constants.rs  lib.rs
tests/: dao_voting.ts
