[package]
name = "Dao_Zk_Proof_Contract_Using_Curve_Dalek"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "dao_zk_proof_contract_using_curve_dalek"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[profile.release]
overflow-checks = true

[dependencies]
anchor-lang = { version = "0.29.0", features = ["init-if-needed"] }
anchor-spl = "0.29.0"
solana-program = "1.10.31"
rand = "0.8.4"
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3.3"
bitvec = "1.0.1"
funty = "2.0.0"
spl-token = "4.0.0"
bellman = "0.14.0"
paired = "0.22.0"
bls12_381 = "0.8.0"
hex = "0.4.3"
curve25519-dalek = { version = "4.0", features = ["digest", "rand_core"] }
sha3 = "0.10.3"
merlin = "3.0.0"
subtle = "2.4.0"
